--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.4.0",
-    "redux-form": "^5.3.1"
+    "redux-form": "^5.3.1",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
